Update eslint options, add svg icons

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,5 +17,6 @@
         </noscript>
         <main id="app"></main>
         <!-- built files will be auto injected -->
+        <script src="https://cdn.linearicons.com/free/1.0.0/svgembedder.min.js"></script>
     </body>
 </html>
